--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "stun"
-version = "0.3.0"
+version = "1.0.0"
 authors = ["André Amado <andreamado1@gmail.com>"]
 edition = "2018"
+license = "CC-BY-4.0"
 
 
 [dependencies]
