--- a/example_output_configuration.toml
+++ b/example_output_configuration.toml
@@ -60,9 +60,20 @@ options = [
 ###################################################################################
 
 ###################################################################################
-# Saves detailed information about the generation of fixation at each
-# locus and which allele was fixed
+# Saves information about the generation of fixation at each locus and which
+# allele was fixed (saved at the end of each run)
 [fixations]
+# set to true to save fixation details
+save = true
+
+# uncomment to specify the file name (otherwise an automatic file name is assigned)
+# output_filename = "example.dat"
+###################################################################################
+
+###################################################################################
+# Saves information about each fixation in the population (saved whenever a 
+# fixation occurs)
+[fixation_details]
 # set to true to save fixation details
 save = true
 
